Fix align issue and update cloud page

--- a/static/sass/styles.scss
+++ b/static/sass/styles.scss
@@ -179,3 +179,14 @@ body {
   height: 2rem;
   margin-bottom: 1.25rem;
 }
+
+// Fix the text alignment
+h1.u-align--center,
+h2.u-align--center,
+h3.u-align--center,
+h4.u-align--center,
+h5.u-align--center,
+h6.u-align--center,
+p.u-align--center {
+  max-width: none;
+}
